src/objects/Apttus_Config2__LoyaltyPointAccrualAdjustmentItem__c.object
<CustomObject>
    <description>Represents loyalty points accrual adjustments for a product/service</description>
    <fields>
        <fullName>Apttus_Config2__AccrualSummaryId__c</fullName>
        <description>ID of the associated point accrual summary</description>
        <inlineHelpText>ID of the associated point accrual summary</inlineHelpText>
        <label>Accrual Summary</label>
        <referenceTo>Apttus_Config2__LoyaltyPointAccrualSummary__c</referenceTo>
        <relationshipName>AdhocLoyaltyPointAccrualItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentDate__c</fullName>
        <description>The adjustment date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The adjustment date</inlineHelpText>
        <label>Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentReason__c</fullName>
        <description>The adjustment reason</description>
        <inlineHelpText>The adjustment reason</inlineHelpText>
        <label>Adjustment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The adjustment description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The adjustment description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipName>AdhocLoyaltyPointAccrualItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Points__c</fullName>
        <description>The loyalty points accrued for the line item</description>
        <inlineHelpText>The loyalty points accrued for the line item</inlineHelpText>
        <label>Points</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Loyalty Point Accrual Adjustment Item</label>
    <nameField>
        <displayFormat>AA-{0000000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Point Accrual Adjustment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>